--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -10,7 +10,7 @@
 
 <ion-content padding>
 
-  <h3>Welcome to your first Ionic app!</h3>
+  <h3>We see a change!</h3>
 
   <p>
     This starter project is our way of helping you get a functional app running in record time.
